tests/ui/proc-macro/lifetimes.stderr
error: expected type, found `'`
  --> $DIR/lifetimes.rs:7:10
   |
LL | type A = single_quote_alone!();
   |          ^^^^^^^^^^^^^^^^^^^^^
   |          |
   |          expected type
   |          this macro call doesn't expand to a type
   |
   = note: this error originates in the macro `single_quote_alone` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

